Use sdk/ui for ActionButton
Stop using sdk/widget to avoid deprecation messages.

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "value":"^file://.*$"
   },
   {
-    "name":"showWidget",
+    "name":"showActionButton",
     "title":"Show Icon",
     "description":"Whether to show the icon in the Add-on Bar.",
     "type":"bool",
